fix layout issue

--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -35,7 +35,7 @@ div
 
     @include lg
         padding: var(--space-md)
-        margin: 0 var(--space-md)
+        margin: 0 auto
     
     @include xl
 
